Relative link notes

--- a/starter-template/index.html
+++ b/starter-template/index.html
@@ -7,10 +7,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- External link to your main stylesheet -->
+        <!-- External link (relative) to your main stylesheet -->
         <link rel="stylesheet" href="css/screen.css">
 
-        <!-- External link to your javascript file -->
+        <!-- External link (relative) to your javascript file -->
         <script src="js/index.js"></script>
     </head>
     <body>
