fonts and stuff

--- a/final/3headerRightSidebarContentFooter.html
+++ b/final/3headerRightSidebarContentFooter.html
@@ -4,6 +4,7 @@
 <head>
     <script src="assets/jquery.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Londrina+Shadow' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
     <style>
         body{
         margin:0;
@@ -25,8 +26,11 @@
         
         .header {
             background: orange;
+            text-align: left;
+            font-family: 'Bungee Inline';
+            font-size: 3em;
             padding: 0;
-            padding-top: 120px;
+            padding-top: .25em;
             padding-bottom: 20px;
         }
 
